--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -15,7 +15,7 @@
 
 button {
     /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 30 -30px transparent;
+    box-shadow: inset 0 3px transparent;
     /* Avoid rounded borders under each button name */
     border: none;
     border-radius: 9;
@@ -28,15 +28,17 @@ button:hover {
 }
 
 #workspaces button {
-    margin-right: 2px;
+    font-size: 20px;
+    margin-right: 0px;
     padding: 0px 5px;
-    color: #eeeeef;
+    color: #c0caf5;
+    background: transparent;
 }
 
 /* Fix: active workspace doesn't show up */
 /* #workspaces button.focused { */
 #workspaces button.active {
-    color: #e5c07b;
+    color: #f7768e;
 }
 
 #workspaces button.hidden {
@@ -50,25 +52,18 @@ button:hover {
 #pulseaudio,
 #battery,
 #network {
-    padding: 4px 8px;
+    padding: 1px 12px;
     background-color: #2c2e47;
     border-radius: 30px;
-    margin: 6px 4px;
+    margin: 4px 3px;
 }
 
 #tray {
     margin-left: 4px;
 }
 
-#scratchpad {
-    color: #cffafe;
-    padding-right: 4px;
-    padding-left: 4px;
-}
-
 #pulseaudio {
     color: #0fb9b1;
-    padding-right: 14px;
 }
 
 #cpu {
@@ -81,13 +76,11 @@ button:hover {
 
 #network {
     color: #929db1;
-    min-width: 200px;
+    min-width: 30px;
 }
 
 #clock {
-    color: #dedede;
-    margin-left: 8px;
-    opacity: 0.7;
+    color: #929db1;
 }
 
 #battery {
@@ -103,4 +96,22 @@ button:hover {
 #battery.critical:not(.charging) {
     background-color: #f53c3c;
     color: #ffffff;
+}
+
+/* Unlocked by "hyprland/window" module */
+#window {
+    border-radius: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+window#waybar {
+    transition: background-color 0.5s ease, opacity 0.5s ease;
+    opacity: 1.0;
+}
+
+/* make window module transparent when no windows present */
+window#waybar.empty {
+    opacity: 0.83;
+    background-color: transparent;
 }
